feat: add fetch role in preparation for create user
